# py_pacman

./: LICENSE  README.md.txt  __init__.py  pyproject.toml
py_pacman/: core.py
