[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py_pacman"
version = "0.1.0"
description = "A Python utility inspired by R's pacman::p_load for auto-installing and importing packages."
authors = [
  { name = "Chris Cooper", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["python", "package management", "pacman", "r"]
